overflow bug

--- a/sass/matches.scss
+++ b/sass/matches.scss
@@ -96,14 +96,19 @@ html {
                     display: none;
                     position: absolute;
                     left: 0;
-                    margin-top: 18px;
-                    top: 40px;
+                    top: 60px;
                     background: #fff;
                     box-shadow: 0 2px 10px rgba(0,0,0,.2);
                     min-width: 200px;
                     color: $mainColor;
                     border: 1px solid #ccc;
                     border-color: rgba(0,0,0,.2);
+                    padding: 0;
+                    margin: 0;
+
+                    li {
+                        margin: 8px 0;
+                    }
                 }
 
                 &:hover > ul {
@@ -117,6 +122,7 @@ html {
         box-sizing: border-box;
         width: 100%;
         padding-left: 20px;
+        margin-left: 0;
     }
 
     div.content2 {
